# gemmhpp

./: CMakeLists.txt  LICENSE  README.md  makefile
include/: gemm.hpp
test/: cblas.h  test.cpp
